fixed app title on mobile

--- a/views/scss/_navigation.scss
+++ b/views/scss/_navigation.scss
@@ -13,11 +13,11 @@
 	margin-top: 10px;
 
 	&:before {
-  content: 'HAPPENN';
+  content: "  HAPPEN'N";
   float: right;
   padding-top: 8px;
-  color: white;
-  right: 250px;
+  color: #54c0e8;
+  right: 230px;
   position: absolute;
 	}
 
